<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="test.edualves.easynvesttest.form.ui.MainFormActivity">

    <TextView
        android:id="@+id/title_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:text="Olá, primeiro se apresente\n com o seu nome:" />

    <test.edualves.easynvesttest.utils.CustomTextInputLayout
        android:id="@+id/email_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:theme="@style/EditTextFloatingLabelRegisterBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_input"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#000"
            android:textSize="14sp"
            tools:hint="@string/email_label_form" />

    </test.edualves.easynvesttest.utils.CustomTextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input"
        tools:text="@string/email_checkbox_text" />

    <RelativeLayout
        android:id="@+id/send_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/blue_btn_shape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_email"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TextView
            android:id="@+id/send_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/next_btn_title" />

    </RelativeLayout>

    <test.edualves.easynvesttest.utils.CustomTextInputLayout
        android:id="@+id/name_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="157dp"
        android:theme="@style/EditTextFloatingLabelRegisterBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusLeft="@+id/input_email"
            android:textColor="#000"
            android:textSize="14sp"
            tools:hint="@string/name_label_form" />

    </test.edualves.easynvesttest.utils.CustomTextInputLayout>

    <ImageView
        android:id="@+id/name_clear"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_limpar"
        app:layout_constraintRight_toRightOf="@+id/name_text_input"
        app:layout_constraintTop_toTopOf="@+id/name_text_input"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/email_clear"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_limpar"
        app:layout_constraintBottom_toBottomOf="@+id/email_text_input"
        app:layout_constraintLeft_toLeftOf="@+id/name_clear"
        app:layout_constraintRight_toRightOf="@+id/name_clear"
        app:layout_constraintTop_toBottomOf="@+id/name_text_input"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
