<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/more_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/BlueFont"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Mais informações sobre o investimento" />

    <TextView
        android:id="@+id/fund_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/fundo"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline3" />

    <TextView
        android:id="@+id/cdi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="0dp"
        android:text="@string/cdi_label"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline4" />

    <TextView
        android:id="@+id/at_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_month_label"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/fund_month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="0,3%" />

    <TextView
        android:id="@+id/cdi_month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="0,3%" />

    <TextView
        android:id="@+id/at_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/at_year_label"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/at_month" />

    <TextView
        android:id="@+id/fund_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/fund_month_value"
        tools:text="13,01%" />

    <TextView
        android:id="@+id/cdi_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="19dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/cdi_month_value"
        tools:text="12,08%" />

    <TextView
        android:id="@+id/at_twelve_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/at_twelve_months_label"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/at_year" />

    <TextView
        android:id="@+id/fund_twelve_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-1dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/fund_year_value"
        tools:text="17,09%" />

    <TextView
        android:id="@+id/cdi_twelve_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/cdi_year_value"
        tools:text="17,06%" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="0.5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/separator_investment"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/fund_twelve_value" />

    <TextView
        android:id="@+id/admin_tax_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        tools:text="Taxa de administração"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/admin_tax_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        tools:text="0,50%"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        android:layout_marginRight="0dp" />

    <TextView
        android:id="@+id/start_apply_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        tools:text="Aplicação inicial"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/admin_tax_label" />

    <TextView
        android:id="@+id/start_apply_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        tools:text="R$ 10.000,00"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        android:layout_marginRight="-3dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/admin_tax_value" />

    <TextView
        android:id="@+id/minimum_move_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        tools:text="Movimentação mínima"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/start_apply_label" />

    <TextView
        android:id="@+id/minimum_move_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/start_apply_value"
        tools:text="R$ 1.000,00" />

    <TextView
        android:id="@+id/minimum_balance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/minimum_move_label"
        tools:text="Saldo mínimo" />

    <TextView
        android:id="@+id/minimum_balance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/minimum_move_value"
        tools:text="R$ 5.000,00" />

    <TextView
        android:id="@+id/withdraw_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        tools:text="Resgate (valor bruto)"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/minimum_balance_label" />


    <TextView
        android:id="@+id/withdraw_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/minimum_balance_value"
        tools:text="D+0" />

    <TextView
        android:id="@+id/fee_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        tools:text="Cota (valor bruto)"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/withdraw_label" />

    <TextView
        android:id="@+id/fee_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        tools:text="D+1"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        android:layout_marginRight="-3dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/withdraw_value" />

    <TextView
        android:id="@+id/payment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Manatee"
        android:textSize="14sp"
        tools:text="Pagamento (valor bruto)"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/fee_label" />

    <TextView
        android:id="@+id/payment_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="@color/BlackFont"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/fee_value"
        tools:text="D+2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="123dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="123dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="252dp"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="340dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="268dp"
        android:orientation="horizontal" />

</android.support.constraint.ConstraintLayout>